# zemismart-blinds

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  PROTOCOL.md  README.md  hacs.json  pyproject.toml  test.py
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  hassfest.yaml  release.yml  validate.yml
custom_components/zemismart_blinds/: __init__.py  air.py  calibrations.py  codec.py  config_flow.py  const.py  coordinator.py  cover.py  diagnostics.py  manifest.json  models.py  services.yaml  state_sync.py  strings.json
custom_components/zemismart_blinds/translations/: en.json
docs/claude/: 2026-07-20-bridge-overlap-graph-measurement.md  2026-07-20-cross-bridge-air-arbitration-design.md  2026-07-20-overlap-matrix-run1.json  2026-07-20-overlap-matrix-run2.json
docs/design/: 2026-07-15-state-sync-consumer-design.md  2026-07-15-state-sync-consumer-plan.md  2026-07-16-takeover-resolution-refactor.md
docs/superpowers/plans/: 2026-07-17-remote-centric-00-roadmap.md  2026-07-17-remote-centric-01-data-model.md  2026-07-17-remote-centric-02a-wizard.md  2026-07-17-remote-centric-02b-subentry-flows.md  2026-07-17-remote-centric-02c-panel-fixes.md  2026-07-17-remote-centric-03a-leaf-entities.md  2026-07-17-remote-centric-03b-aggregates.md  2026-07-24-covers-in-entry-data.md
docs/superpowers/specs/: 2026-07-17-remote-centric-00-roadmap.md  (+3 more)
tests/: conftest.py  synthetic.py  test_air.py  test_codec.py  test_config_flow.py  test_const.py  test_cover.py  test_diagnostics.py  test_init.py  test_models.py  test_state_sync.py
