[project]
name = "zemismart-blinds"
version = "0.1.0"
description = "Home Assistant control for Zemismart 433 MHz roller blinds"
readme = "README.md"
requires-python = ">=3.14.2,<3.15"
license = "MIT"

[dependency-groups]
dev = [
    "homeassistant==2026.7.2",
    "mypy>=1.18.2",
    "paho-mqtt==2.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "RUF", "SIM", "TC", "UP"]
ignore = [
    "COM812",
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.14"
strict = true
explicit_package_bases = true
files = ["custom_components/zemismart_blinds", "tests"]

[[tool.mypy.overrides]]
module = ["homeassistant", "homeassistant.*", "voluptuous"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "custom_components.zemismart_blinds.config_flow",
    "custom_components.zemismart_blinds.cover",
]
disallow_subclassing_any = false
disable_error_code = ["call-arg"]
